--- a/index.html
+++ b/index.html
@@ -54,12 +54,18 @@
 <div class="row">
 	<div class="col-sm-3"></div>
 	<div id="s" class="col-sm-6">
-		<svg width="400" heigth="200">
-			 
-			<rect width="200" height="100" style="fill:#eb8715; stroke-width:4;stroke:#545352"/>	
-			<text x="35" y="65" fill="#545352" style="font-family:Arial-black; font-weight: bold;font-size:50px; " >SITE</text>
-
-		</svg>
+	<svg width="450" height="150">
+			<rect x="0" y="50" width="400" height="100" style="fill:#eb8715; stroke-width:1;stroke:black"/>	
+			<text x="155" y="115" fill="black" style="font-family:Arial-black; font-weight: bold;font-size:50px;">SITE</text>
+			<path d="M400 50 L450 0 L450 100 L400 150 Z" style="fill:#b06005; stroke-width:1;stroke:black"/>
+			<path d="M0 50 L50 0 L450 0 L400 50 Z" style="fill:#b06005; stroke-width:1;stroke:black" />
+			<path d="M30 40 L60 10 L160 10 L130 40 Z" style="fill:#804604;stroke-width:1;stroke:black" />
+			<path d="M160 40 L190 10 L290 10 L260 40 Z" style="fill:#804604;stroke-width:1;stroke:black" />
+			<path d="M290 40 L320 10 L420 10 L390 40 Z" style="fill:#804604;stroke-width:1;stroke:black" />
+			<path d="M30 40 L60 10 L60 40  Z" style="fill:black"/>
+			<path d="M160 40 L190 10 L190 40  Z" style="fill:black"/>
+			<path d="M290 40 L320 10 L320 40  Z" style="fill:black"/>
+	</svg>
 	
 	</div>	
 	<div class="col-sm-3"></div>
@@ -69,11 +75,18 @@
 <div class="row">
 	<div  class="col-sm-4"></div>
 	<div id="e" class="col-sm-3">
-		<svg width="400" heigth="200">
-			<rect width="200" height="100" style="fill:#eb8715; stroke-width:4;stroke:#545352"/>	
-			<text x="35" y="65" fill="#545352" style="font-family:Arial-black; font-weight: bold;font-size:50px; " >EM</text>
-
-		</svg>
+	<svg width="450" height="150">
+			<rect x="0" y="50" width="400" height="100" style="fill:#eb8715;stroke-width:1;stroke:black"/>	
+			<text x="185" y="115" fill="black" style="font-family:Arial-black; font-weight: bold;font-size:50px;">EM</text>
+			<path d="M400 50 L450 0 L450 100 L400 150 Z" style="fill:#b06005;stroke-width:1;stroke:black"/>
+			<path d="M0 50 L50 0 L450 0 L400 50 Z" style="fill:#b06005;stroke-width:1;stroke:black" />
+			<path d="M30 40 L60 10 L160 10 L130 40 Z" style="fill:#804604;stroke-width:1;stroke:black" />
+			<path d="M160 40 L190 10 L290 10 L260 40 Z" style="fill:#804604;stroke-width:1;stroke:black" />
+			<path d="M290 40 L320 10 L420 10 L390 40 Z" style="fill:#804604;stroke-width:1;stroke:black" />
+			<path d="M30 40 L60 10 L60 40  Z" style="fill:black"/>
+			<path d="M160 40 L190 10 L190 40  Z" style="fill:black"/>
+			<path d="M290 40 L320 10 L320 40  Z" style="fill:black"/>
+	</svg>
 	</div>	
 	<div class="col-sm-5"></div>
 </div>
@@ -81,11 +94,18 @@
 <div class="row">
 	<div class="col-sm-1"></div>
 	<div id="c" class="col-sm-10">
-		<svg width="680" heigth="200">
-			<rect width="400" height="100" style="fill:#eb8715; stroke-width:5;stroke:#545352"/>	
-			<text x="35" y="65" fill="#545352" style="font-family:Arial-black; font-weight: bold;font-size:50px; " >CONSTRUÇÃO</text>
-
-		</svg>
+	<svg width="450" height="150">
+			<rect x="0" y="50" width="400" height="100" style="fill:#eb8715;stroke-width:1;stroke:black"/>	
+			<text x="35" y="115" fill="black" style="font-family:Arial-black; font-weight: bold;font-size:50px;">CONSTRUÇÃO</text>
+			<path d="M400 50 L450 0 L450 100 L400 150 Z" style="fill:#b06005;stroke-width:1;stroke:black"/>
+			<path d="M0 50 L50 0 L450 0 L400 50 Z" style="fill:#b06005;stroke-width:1;stroke:black" />
+			<path d="M30 40 L60 10 L160 10 L130 40 Z" style="fill:#804604;stroke-width:1;stroke:black" />
+			<path d="M160 40 L190 10 L290 10 L260 40 Z" style="fill:#804604;stroke-width:1;stroke:black" />
+			<path d="M290 40 L320 10 L420 10 L390 40 Z" style="fill:#804604;stroke-width:1;stroke:black" />
+			<path d="M30 40 L60 10 L60 40  Z" style="fill:black"/>
+			<path d="M160 40 L190 10 L190 40  Z" style="fill:black"/>
+			<path d="M290 40 L320 10 L320 40  Z" style="fill:black"/>
+	</svg>
 	</div>	
 	<div class="col-sm-1"></div>
 </div>
