--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
   	</style>
 
 </head>
-<body style="background-image: url(images/muro.svg)">
-	<br><br><br>
+<body style="background-image: url(images/muro.svg);">
+	
 <div class="row">
-	<div class="col-sm-3"></div>
-	<div id="s" class="col-sm-6">
+	<div class="col-xs-3"></div>
+	<div id="s" class="col-xs-6">
 	<svg width="450" height="150">
 			<rect x="0" y="50" width="400" height="100" style="fill:#eb8715; stroke-width:1;stroke:black"/>	
 			<text x="155" y="115" fill="black" style="font-family:Arial-black; font-weight: bold;font-size:50px;">SITE</text>
@@ -68,13 +68,13 @@
 	</svg>
 	
 	</div>	
-	<div class="col-sm-3"></div>
+	<div class="col-xs-3"></div>
 </div>
 
-	<br>
+	
 <div class="row">
-	<div  class="col-sm-4"></div>
-	<div id="e" class="col-sm-3">
+	<div  class="col-xs-4"></div>
+	<div id="e" class="col-xs-3">
 	<svg width="450" height="150">
 			<rect x="0" y="50" width="400" height="100" style="fill:#eb8715;stroke-width:1;stroke:black"/>	
 			<text x="185" y="115" fill="black" style="font-family:Arial-black; font-weight: bold;font-size:50px;">EM</text>
@@ -88,12 +88,12 @@
 			<path d="M290 40 L320 10 L320 40  Z" style="fill:black"/>
 	</svg>
 	</div>	
-	<div class="col-sm-5"></div>
+	<div class="col-xs-5"></div>
 </div>
-<br>
+
 <div class="row">
-	<div class="col-sm-1"></div>
-	<div id="c" class="col-sm-10">
+	<div class="col-xs-1"></div>
+	<div id="c" class="col-xs-10">
 	<svg width="450" height="150">
 			<rect x="0" y="50" width="400" height="100" style="fill:#eb8715;stroke-width:1;stroke:black"/>	
 			<text x="35" y="115" fill="black" style="font-family:Arial-black; font-weight: bold;font-size:50px;">CONSTRUÇÃO</text>
@@ -107,10 +107,32 @@
 			<path d="M290 40 L320 10 L320 40  Z" style="fill:black"/>
 	</svg>
 	</div>	
-	<div class="col-sm-1"></div>
+	<div class="col-xs-1"></div>
 </div>
 
+<div class="row">
+	<div class="col-md-4"></div>
+	<div class="col-md-4">
+		
+		<a href="examples.html">
+		<svg width="450" height="150">
+			<rect x="0" y="50" width="400" height="100" style="fill:#889dba;stroke-width:1;stroke:black"/>	
+		    <text x="95" y="115" fill="black" style="font-family:Arial-black; font-weight: bold;font-size:50px">TREINOS</text> 
+			<path d="M400 50 L450 0 L450 100 L400 150 Z" style="fill:#889dba;stroke-width:1;stroke:black"/>
+			<path d="M0 50 L50 0 L450 0 L400 50 Z" style="fill:#889dba;stroke-width:1;stroke:black" />
+			<path d="M30 40 L60 10 L160 10 L130 40 Z" style="fill:#889dba;stroke-width:1;stroke:black" />
+			<path d="M160 40 L190 10 L290 10 L260 40 Z" style="fill:#889dba;stroke-width:1;stroke:black" />
+			<path d="M290 40 L320 10 L420 10 L390 40 Z" style="fill:#889dba;stroke-width:1;stroke:black" />
+			<path d="M30 40 L60 10 L60 40  Z" style="fill:black"/>
+			<path d="M160 40 L190 10 L190 40  Z" style="fill:black"/>
+			<path d="M290 40 L320 10 L320 40  Z" style="fill:black"/>
+	</svg>
+	</a>
 
+	
+	</div>
+	<div class="col-md-4"></div>
+</div>
 
 
 </body>
